explicitly require theano and matplotlib

--- a/environment.yml
+++ b/environment.yml
@@ -7,5 +7,7 @@ dependencies:
   - pytest
   - pymc3
   - scipy
+  - matplotlib
+  - theano
   - python=3.8
 prefix: /Users/ed/anaconda3_2020/envs/care-home-fit
