--- a/environment.yml
+++ b/environment.yml
@@ -10,5 +10,6 @@ dependencies:
   - matplotlib
   - theano
   - numba
+  - cachetools
   - python=3.8
 prefix: /Users/ed/anaconda3_2020/envs/care-home-fit
